--- a/Equipment.html
+++ b/Equipment.html
@@ -22,7 +22,7 @@
                 <a href="Supply Chain.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
                     <i class="fas fa-tachometer-alt"></i><span>Dashboard</span>
                 </a>
-                <a href="Shipment Tracking.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
+                <a href="index.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
                     <i class="fas fa-map-marked-alt"></i><span>Shipment Tracking</span>
                 </a>
                 <a href="analytics.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
