--- a/Route Planning.html
+++ b/Route Planning.html
@@ -28,7 +28,7 @@
         <p class="text-sm text-blue-300 mt-1">Cold Chain Intelligence</p>
       </div>
       <nav class="flex-1 p-4 space-y-2 text-sm">
-        <a href="Supply Chain.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
+        <a href="index.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
           <i class="fas fa-tachometer-alt"></i><span>Dashboard</span>
         </a>
         <a href="Shipment Tracking.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
