--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <i class="fas fa-file-alt"></i>
                         <span>Compliance</span>
                     </a>
-                    <a href="#" class="flex items-center space-x-2 py-2 px-3 hover:bg-blue-800 rounded-lg text-blue-200 hover:text-white mt-1">
+                    <a href="Route Planning.html" class="flex items-center space-x-2 py-2 px-3 hover:bg-blue-800 rounded-lg text-blue-200 hover:text-white mt-1">
                         <i class="fas fa-route"></i>
                         <span>Route Planning</span>
                     </a>
