--- a/Route Planning.html
+++ b/Route Planning.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Route Planning | PharmaCold</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
   <style>
     #routeMap {
       height: 400px;
@@ -18,39 +20,37 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
   <div class="flex min-h-screen">
-    <!-- Sidebar -->
     <aside class="w-64 bg-blue-900 text-white flex flex-col">
-      <div class="p-5 border-b border-blue-800">
-        <div class="flex items-center space-x-3">
-          <i class="fas fa-snowflake text-2xl text-blue-300"></i>
-          <h1 class="text-xl font-bold">PharmaCold</h1>
-        </div>
-        <p class="text-sm text-blue-300 mt-1">Cold Chain Intelligence</p>
-      </div>
-      <nav class="flex-1 p-4 space-y-2 text-sm">
-        <a href="index.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
-          <i class="fas fa-tachometer-alt"></i><span>Dashboard</span>
-        </a>
-        <a href="Shipment Tracking.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
-          <i class="fas fa-map-marked-alt"></i><span>Shipment Tracking</span>
-        </a>
-        <a href="analytics.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
-          <i class="fas fa-chart-line"></i><span>Analytics</span>
-        </a>
-        <a href="equipment.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
-          <i class="fas fa-cogs"></i><span>Equipment</span>
-        </a>
-        <a href="#" class="flex items-center space-x-3 py-2 px-3 bg-blue-800 rounded">
-          <i class="fas fa-route"></i><span>Route Planning</span>
-        </a>
-      </nav>
-      <div class="p-4 border-t border-blue-800">
-        <a href="#" class="flex items-center space-x-2 text-blue-300 hover:text-white">
-          <i class="fas fa-sign-out-alt"></i><span>Logout</span>
-        </a>
-      </div>
-    </aside>
-
+  <div class="p-5 border-b border-blue-800">
+    <div class="flex items-center space-x-3">
+      <i class="fas fa-snowflake text-2xl text-blue-300"></i>
+      <h1 class="text-xl font-bold">PharmaCold</h1>
+    </div>
+    <p class="text-sm text-blue-300 mt-1">Cold Chain Intelligence</p>
+  </div>
+  <nav class="flex-1 p-4 space-y-2 text-sm">
+    <a href="index.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
+      <i class="fas fa-tachometer-alt"></i><span>Dashboard</span>
+    </a>
+    <a href="Shipment Tracking.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
+      <i class="fas fa-map-marked-alt"></i><span>Shipment Tracking</span>
+    </a>
+    <a href="analytics.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
+      <i class="fas fa-chart-line"></i><span>Analytics</span>
+    </a>
+    <a href="equipment.html" class="flex items-center space-x-3 py-2 px-3 hover:bg-blue-800 rounded">
+      <i class="fas fa-cogs"></i><span>Equipment</span>
+    </a>
+    <a href="#" class="flex items-center space-x-3 py-2 px-3 bg-blue-800 rounded">
+      <i class="fas fa-route"></i><span>Route Planning</span>
+    </a>
+  </nav>
+  <div class="p-4 border-t border-blue-800">
+    <a href="#" class="flex items-center space-x-2 text-blue-300 hover:text-white">
+      <i class="fas fa-sign-out-alt"></i><span>Logout</span>
+    </a>
+  </div>
+</aside>
     <!-- Main Content -->
     <main class="flex-1 p-6">
       <h2 class="text-2xl font-bold mb-6">Route Planning & Optimization</h2>
@@ -61,26 +61,24 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
           <div>
             <label class="block text-sm font-medium mb-1">Origin</label>
-            <input type="text" placeholder="e.g., Melbourne Warehouse" class="w-full px-4 py-2 border rounded" />
+            <select id="origin" class="w-full border px-3 py-2 rounded">
+              <option value="">-- Select Origin --</option>
+              <option value="-37.8136,144.9631">Melbourne</option>
+              <option value="-33.8688,151.2093">Sydney</option>
+              <option value="-27.4698,153.0251">Brisbane</option>
+            </select>
           </div>
           <div>
             <label class="block text-sm font-medium mb-1">Destination</label>
-            <input type="text" placeholder="e.g., Sydney Distribution Center" class="w-full px-4 py-2 border rounded" />
-          </div>
-          <div>
-            <label class="block text-sm font-medium mb-1">Expected Departure</label>
-            <input type="datetime-local" class="w-full px-4 py-2 border rounded" />
-          </div>
-          <div>
-            <label class="block text-sm font-medium mb-1">Risk Threshold</label>
-            <select class="w-full px-4 py-2 border rounded">
-              <option>Low</option>
-              <option>Medium</option>
-              <option>High</option>
+            <select id="destination" class="w-full border px-3 py-2 rounded">
+              <option value="">-- Select Destination --</option>
+              <option value="-33.8688,151.2093">Sydney</option>
+              <option value="-27.4698,153.0251">Brisbane</option>
+              <option value="-31.9505,115.8605">Perth</option>
             </select>
           </div>
         </div>
-        <button class="mt-4 bg-blue-600 text-white px-4 py-2 rounded">Generate Route</button>
+        <button onclick="drawRoute()" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded">Generate Route</button>
       </div>
 
       <!-- Route Map -->
@@ -102,27 +100,9 @@
               <th class="px-4 py-2">Sustainability</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="route-table-body">
             <tr class="border-t">
-              <td class="px-4 py-2">Route A</td>
-              <td class="px-4 py-2">10 hrs</td>
-              <td class="px-4 py-2">Stable (96%)</td>
-              <td class="px-4 py-2 text-yellow-600">Medium</td>
-              <td class="px-4 py-2">CO₂: 42kg</td>
-            </tr>
-            <tr class="border-t">
-              <td class="px-4 py-2">Route B</td>
-              <td class="px-4 py-2">8.5 hrs</td>
-              <td class="px-4 py-2 text-red-600">Unstable (65%)</td>
-              <td class="px-4 py-2 text-red-600">High</td>
-              <td class="px-4 py-2">CO₂: 58kg</td>
-            </tr>
-            <tr class="border-t">
-              <td class="px-4 py-2">Route C</td>
-              <td class="px-4 py-2">11 hrs</td>
-              <td class="px-4 py-2 text-green-600">Very Stable (99%)</td>
-              <td class="px-4 py-2 text-green-600">Low</td>
-              <td class="px-4 py-2">CO₂: 39kg</td>
+              <td class="px-4 py-2" colspan="5">No route selected yet</td>
             </tr>
           </tbody>
         </table>
@@ -130,25 +110,54 @@
     </main>
   </div>
 
-  <!-- Leaflet Map Script -->
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const map = L.map('routeMap').setView([-33.86, 151.20], 5);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors'
+    const map = L.map('routeMap').setView([-25.2744, 133.7751], 4);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    let control;
+
+    function drawRoute() {
+      const originVal = document.getElementById('origin').value;
+      const destVal = document.getElementById('destination').value;
+      const origin = originVal.split(',').map(Number);
+      const destination = destVal.split(',').map(Number);
+
+      if (!originVal || !destVal || originVal === destVal) {
+        alert('Please select different origin and destination');
+        return;
+      }
+
+      if (control) map.removeControl(control);
+
+      control = L.Routing.control({
+        waypoints: [
+          L.latLng(origin[0], origin[1]),
+          L.latLng(destination[0], destination[1])
+        ],
+        lineOptions: { styles: [{ color: 'blue', weight: 4 }] },
+        createMarker: function (i, wp) {
+          return L.marker(wp.latLng).bindPopup(i === 0 ? 'Origin' : 'Destination');
+        },
+        router: new L.Routing.OSRMv1({ serviceUrl: 'https://router.project-osrm.org/route/v1' })
+      }).on('routesfound', function (e) {
+        const summary = e.routes[0].summary;
+        const durationHrs = (summary.totalTime / 3600).toFixed(1);
+        const distanceKm = (summary.totalDistance / 1000).toFixed(1);
+
+        // Dynamically update route options table
+        document.getElementById('route-table-body').innerHTML = `
+          <tr class="border-t">
+            <td class="px-4 py-2">Generated Route</td>
+            <td class="px-4 py-2">${durationHrs} hrs</td>
+            <td class="px-4 py-2 text-green-600">Stable (95%)</td>
+            <td class="px-4 py-2 text-yellow-600">Medium</td>
+            <td class="px-4 py-2">CO₂: ${(distanceKm * 3.5).toFixed(1)}kg</td>
+          </tr>
+        `;
       }).addTo(map);
-
-      const origin = L.marker([-37.8136, 144.9631]).addTo(map).bindPopup('Melbourne Warehouse');
-      const destination = L.marker([-33.8688, 151.2093]).addTo(map).bindPopup('Sydney Distribution Center');
-
-      const routeLine = L.polyline([
-        [-37.8136, 144.9631],
-        [-35.2809, 149.1300], // Canberra waypoint
-        [-33.8688, 151.2093]
-      ], { color: 'blue', weight: 4 }).addTo(map);
-
-      map.fitBounds(routeLine.getBounds());
-    });
+    }
   </script>
 </body>
 </html>
